Increased legend spacing, fixed small hover bug

--- a/styles/floxStyle.css
+++ b/styles/floxStyle.css
@@ -74,19 +74,6 @@ html, body {
 	line-height: 110%;
 }
 
-.legendTitle {
-	color: white;
-	font-size: 16px;
-	line-height: 110%;
-}
-
-#legendItemContainer {
-	width: 100%;
-	height: auto;
-}
-
-
-
 #newProgressBar {
 	box-shadow: 2px 2px 2px rgba(64,64,64,0.5);
 	display: inline-block;
@@ -105,12 +92,6 @@ html, body {
     background: rgba(64, 64, 64, 0.9);
 }
 
-
-
-
-
-
-
 #subtitleText {
 	height: 22px;
 	text-align: center;
@@ -120,7 +101,6 @@ html, body {
 	color: white;
 	whitespace: nowrap;
 }
-
 
 #hintText {
 	color: white;
@@ -175,10 +155,6 @@ html, body {
     -webkit-user-select: none;
     user-select: none;
 }
-
-
-
-
 
 .UIPanel {
 	background: rgb(64, 64, 64);
@@ -239,32 +215,6 @@ html, body {
 	text-align: center;
 }
 
-#legendSlidingPanel {
-	position: absolute;
-	width: 222px;
-	height: auto;
-	position: fixed;
-	bottom: 0px;
-	left: -250px;
-	pointer-events: none;
-}
-
-#legendSlidingPanelContent {
-    border-radius: 0px 5px 0px 0px;
-    height: auto;
-    width: 204px;
-    padding: 8px;
-}
-
-#legendSlidingPanelTab {
-	width: 18px;
-	height: 40px;
-	border-radius: 0px 2px 2px 0px;
-	float: right;
-	margin-top: 15px;
-
-}
-
 #optionsSlidingPanel {
 	position: absolute;
 	width: 185px;
@@ -297,11 +247,6 @@ html, body {
  
 
 /* END Sliding Panel Stuff ----------------------- */
-
-
-
-
-
 
 .floxTooltip {
 	position: absolute;
@@ -407,3 +352,45 @@ p {
 
 
 
+/*Legend stuff -------------------*/
+
+.legendTitle {
+    color: white;
+    font-size: 16px;
+    line-height: 110%;
+}
+
+#legendItemContainer {
+    width: 100%;
+    height: auto;
+}
+
+#legendSlidingPanel {
+    position: absolute;
+    width: 222px;
+    height: auto;
+    position: fixed;
+    bottom: 0px;
+    left: -250px;
+    pointer-events: none;
+}
+
+#legendSlidingPanelContent {
+    border-radius: 0px 5px 0px 0px;
+    height: auto;
+    width: 204px;
+    padding: 8px;
+}
+
+#legendSlidingPanelTab {
+    width: 18px;
+    height: 40px;
+    border-radius: 0px 2px 2px 0px;
+    float: right;
+    margin-top: 15px;
+}
+
+.legendSectionSpacer {
+    width: 100%;
+    height: 10px;
+}
